--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@400;500;600;0,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap');
   
   :root {
     --color-body: #b6cbce;
@@ -36,20 +36,85 @@
     img{
         width: 100%;
     }
+
+    .text-brand{
+        color: var(--color-brand);
+    }
+    .full-height{
+        min-height: 100vh ;
+        max-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-top: 80px;
+        padding-bottom: 80px;
+        border: 2px solid rgba(255,255,255,0.1);
+    }
     /* navbar */
-     
+     .navbar{
+        background-color: var(--color-base);
+     }
     .navbar.nav-link{
         font-weight: 700;
         text-transform: uppercase;
-        color: #fff;
+        color: #ffffff;
     }
+.navbar.nav-link:hover{
+    color: var(--color-brand2);
+}
 
     @media(min-width:992px){
         .navbar{
             min-height: 100vh;
             width:var(--sidbar-width);
-            background: linear-gradient(rgba(3, 63, 71, 0.9), rgba(3, 63, 71,0.9)) , url(../images/sidebar-img.jpg);
+            background: linear-gradient(rgba(3, 63, 71, 0.8), rgba(3, 63, 71,0.8)) , url(../images/sidebar-img.jpg);
             background-size: cover;
             background-position: center;
         }
-    }
+        .navbar-brand img{
+            border : 3px solid var(--color-brand)
+        }
+/* Content wrapper */
+#content-wrapper{
+    padding-left: var(--sidbar-width);
+}
+        }
+
+
+        /* BTN */
+
+        .btn{
+            padding: 12px 28px;
+            font-weight: 700;
+        }
+
+        .btn-brand{
+            background-color: var(--color-brand);
+            border-color: var(--color-brand);
+        }
+
+        .btn-brand:hover,
+        .btn-brand:focus{
+            background-color: var(--color-brand2);
+            color: var(--color-base);
+            border-color: var(--color-brand2);
+        }
+        .link-custom{
+            font-weight: 700;
+            position: relative;
+
+        }
+        .link-custom::after{
+            content: "";
+            width: 0px;
+            height: 2px;
+            background-color: var(--color-brand);
+            position: absolute;
+            left: 0;
+            top: 110%;
+            transition: all 0.4s;
+        }
+
+        .link-custom:hover::after{
+            width: 100%;
+        }
