--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,9 @@
     color: var(--color-brand2);
 }
 
+.navbar.nav-link.active{
+    color: var(--color-brand);
+}
     @media(min-width:992px){
         .navbar{
             min-height: 100vh;
