Work Section Completed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,9 @@
     .text-brand{
         color: var(--color-brand);
     }
+    .bg-base{
+        color: var(--color-brand);
+    }
     .full-height{
         min-height: 100vh ;
         max-height: 100%;
@@ -49,6 +52,23 @@
         padding-top: 80px;
         padding-bottom: 80px;
         border: 2px solid rgba(255,255,255,0.1);
+    }
+    .shadow-effect{
+        transition: all 0.5s;
+
+    }
+    .shadow-effect:hover{
+        box-shadow: -6px 6px 0 0 var(--color-brand) ;
+    }
+    .iconbox{
+        width: 60px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 32px;
+        background-color: var(--color-brand);
+        color: var(--color-base);
     }
     /* navbar */
      .navbar{
@@ -120,4 +140,14 @@
 
         .link-custom:hover::after{
             width: 100%;
+        }
+        .card-custom .card-custom-image{
+            overflow: hidden;
+        }
+        .card-custom .card-custom-image img{
+            transition: all 0.4s ease;
+        }
+
+        .card-custom:hover .card-custom-image img{
+            transform: scale(1.1);
         }
