--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,3 +151,35 @@
         .card-custom:hover .card-custom-image img{
             transform: scale(1.1);
         }
+
+        #contact .form-control{
+            background-color: var(--color-base);
+            border-color: var(--color-base);
+            color: var(--color-body);
+        }
+        #contact .form-control:focus{
+            border-color: var(--color-brand);
+            box-shadow: none;
+        }
+        #contact .form-control::placeholder{
+            color: var(--color-body);
+        }
+        #contact input.form-control{
+            height: 44px;
+        }
+
+        /* Social icons */
+        .social-icons{
+
+        }
+
+        .social-icons a{
+            width: 40px;
+            height: 40px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            background-color: var(--color-base);
+            border-radius: 100px;
+            font-size: 24px;
+        }
