--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,15 +139,16 @@
             transition: all 0.4s;
         }
 
-        @media (max-width: 767px) {
-            .card-custom-content {
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              height: 100%; /* Ensure content takes up full height */
+        /* @media (max-width: 767px) {
+            #work {
+                display: flex;
+                flex-direction: column;     
+                height: 100%;
+                justify-content: center;
+                align-items: center;
             }
           }
-
+ */
         .link-custom:hover::after{
             width: 100%;
         }
@@ -181,7 +182,9 @@
         #contact input.form-control{
             height: 44px;
         }
-
+.container{
+    gap: 30px;
+}
   
         /* Social icons */
 .social-icons {
@@ -202,8 +205,6 @@
 }
 
 .social-icons a {
-    width: 70px;
-    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,3 +219,7 @@
     background-color: var(--color-brand);
     color: var(--color-base);
 }
+
+
+  
+  
